--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2538,15 +2538,15 @@ span.badge {
   overflow: hidden;
   text-overflow: ellipsis; }
 
-@font-face {
+/*@font-face {
   font-family: "Material-Design-Icons";
   src: url("../font/material-design-icons/Material-Design-Icons.eot");
   src: url("../font/material-design-icons/Material-Design-Icons.eot?#iefix") format("embedded-opentype"), url("../font/material-design-icons/Material-Design-Icons.woff") format("woff"), url("../font/material-design-icons/Material-Design-Icons.ttf") format("truetype"), url("../font/material-design-icons/Material-Design-Icons.svg#Material-Design-Icons") format("svg");
   font-weight: normal;
-  font-style: normal; }
+  font-style: normal; }*/
 
 [class^="mdi-"], [class*=" mdi-"] {
-  font-family: "Material-Design-Icons";
+  font-family: "MaterialDesignIcons";
   speak: none;
   font-style: normal;
   font-weight: normal;
